spacing fixed

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ height:70px;}
     background-attachment: scroll;
     background-size: cover;
     top: 0;
-    margin-bottom: 2em;
 
 }
 
@@ -75,7 +74,6 @@ height:70px;}
     background-attachment: scroll;
     background-size: cover;
     top: 0;
-    margin-bottom: 2em;
 }
 #admission-bg {
     background-image: url(images/admition_header.jpeg);
